blue-green/blue-vllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-llm-service
spec:
  selector:
    app: blue-gemma-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
