blue-green/green-vllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-llm-service
spec:
  selector:
    app: green-gemma-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
