blue-green/blue-green-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue-green-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: blue-green-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: blue-llm-service
      port: 8085
      weight: 100
    - group: ""
      kind: Service
      name: green-llm-service
      port: 8086
      weight: 0
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Response-Service
          value: blue-service
